--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+spring.h2.console.enabled=true
+# default path: h2-console
+spring.h2.console.path=/h2
+
+
+spring.datasource.url=jdbc:h2:mem:crm
+#spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
+
+
+#spring.h2.console.settings.trace=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.session.jdbc.initialize-schema=always
+spring.sql.init.data-locations= classpath:data.sql
+
+
+
+# App Properties
+jwt.secret=jailhouse
+#bezkoder.app.jwtCookieName= bezkoder
+#bezkoder.app.jwtSecret= bezKoderSecretKey
+#bezkoder.app.jwtExpirationMs= 86400000
 
